Format and configure prettier

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
-    "dev": " nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": " nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "format": "prettier --write ."
   },
   "keywords": [
     "clearvue",
@@ -28,11 +29,11 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
-    "multer": "^2.0.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.45"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
