--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,13 +1,13 @@
 {
-    "singleQuote": true,
-    "bracketSpacing": true,
-    "tabWidth": 2,
-    "semi": true,
-    "trailingComma": "all",
-    "arrowParens": "always",
-    "printWidth": 100,
-    "endOfLine": "lf",
-    "plugins": [
-        "prettier-plugin-tailwindcss"
-    ]
+  "singleQuote": false,
+  "bracketSpacing": true,
+  "tabWidth": 2,
+  "semi": true,
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "printWidth": 100,
+  "endOfLine": "lf",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
