--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
+    "graphql-upload-ts": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "uuid": "^11.1.0",
